undo toList to enable mutable list